17-05-2004 :
 - wxbRestorePanel : Implemented refresh buttons

15-05-2004 :
 - wxbRestorePanel : The user can now mark/unmark a range of files selected
     with shift-click or multiple files selected with ctl-click, by
     right-clicking or using buttons.
 - wxbRestorePanel : Added buttons to mark/unmark directories/files.
 - wxbRestorePanel : Added buttons to force to refresh the whole tree/list

14-05-2004 :
 - wxbMainFrame : Fixed various reconnecting and disconnecting problems.
 - console_thread : The user can now choose the director to use
    when there's multiple directors in the configuration file.
 - wxbRestorePanel : List's columns are now resized correctly in the
     first directory.

13-05-2004 :
 - wxbRestorePanel : Width adjustments between the tree view window
     and the file view window are now possible.

10-05-2004 :
 - wxbTableParser : wxHashMap replaced by wxArray

09-05-2004 :
 - wxbMainFrame : reconnecting/disconnecting implemented
 - wxbMainFrame : Added menus to allow the user to change his config
      file, and to edit it.

08-05-2004 :
 - wxbMainFrame : The user can now choose his configuration file,
      and his choice is stored in a wxConfig (registry under Win32,
      file under Linux)...
 - wxbConfigFileEditor : Created a small text editor

07-05-2004 :
 - console_thread : Added support for the new parse_config which
      returns a status code.
 - wxbMainFrame/console_thread : A command line parameter now
      allows the user to choose his config file.

06-05-2004 :
 - wxbMainFrame : Corrected font bug in GTK+ 1.2
 - console_thread : Added support for Mac OS X configuration
      file location.

02-05-2004 :
 - wxbMainFrame : Corrected incorrect casting of thread event
      functions (reported by Aristedes Maniatis)
 - wxbRestorePanel : Corrected incorrect casting of event
      functions (reported by Aristedes Maniatis)

01-05-2004 :
 - wxbRestorePanel : Corrected a problem when you double-clicked an 