@@ -1,3 +1,6 @@
+21-05-2004 :
+ - wxbRestorePanel : Added functions to get/set working status
+
 17-05-2004 :
  - wxbRestorePanel : Implemented refresh buttons
 
